--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "Desktop",
+  "name": "m5-benchmark",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -e js -r dotenv/config ./src/server.js"
   },
   "keywords": [],
   "author": "",
